remove serviceType and add serviceName in service
