# lib/module/v1/fedoraService/serviceRoute.js
@@ -29,8 +29,8 @@ router.route('/create')
     router.route('/list')
     .get([middleware.authenticate.autntctTkn], function (req, res) {
         let {userId, userType} = req.user
-        let {serviceType,count,pageNo ,status} = req.query
-        serviceFacade.list({userId, userType, serviceType ,pageNo ,count ,status})
+        let {serviceName,count,pageNo ,status} = req.query
+        serviceFacade.list({userId, userType, serviceName ,pageNo ,count ,status})
             .then(function (result) {
                 resHndlr.sendSuccess(res, result, req)
             }).catch(function (err) {
@@ -44,7 +44,7 @@ router.route('/create')
 
     let { userType, userId } = req.user;
     let { 
-        serviceType,
+      serviceName,
         discription,
         location,
         serviceId,
@@ -53,7 +53,7 @@ router.route('/create')
 
      serviceFacade
       .edit({userType, userId ,
-        serviceType,
+        serviceName,
         discription,
         serviceId,
         location,
